<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/light_blue"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!--<TextView-->
            <!--android:id="@+id/toolbar_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:textAppearance="?android:textAppearanceMedium"-->
            <!--android:textColor="@color/white" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_search"
                    android:hint="Search user here" />

                <Button
                    android:id="@+id/btn_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:background="@color/light_blue"
                    android:text="Search"
                    android:textAllCaps="false" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar" />

    </RelativeLayout>

    <!-- The navigation drawer -->
    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        android:background="@color/light_blue"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:background="#fff"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/design_navigation_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/drawer"
                    android:orientation="vertical">

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rel_friend_list"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/light_blue">

                    <TextView
                        android:id="@+id/fa_text"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/fa_text"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/fa_text"
                        android:layout_toRightOf="@+id/fa_text"
                        android:text="@string/chat_friends_list"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_manage_account"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/light_blue">

                    <TextView
                        android:id="@+id/fa_user"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/fa_user"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/manage_accounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/fa_user"
                        android:layout_toRightOf="@+id/fa_user"
                        android:text="@string/manage_accounts"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/light_blue">

                    <TextView
                        android:id="@+id/fa_lock"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/fa_lock"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/fa_lock"
                        android:layout_toRightOf="@+id/fa_lock"
                        android:text="@string/change_password"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_logout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@color/light_blue">

                    <TextView
                        android:id="@+id/fa_sign_out"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:text="@string/fa_sign_out"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="17dp"
                        android:layout_marginStart="15dp"
                        android:layout_toEndOf="@+id/fa_sign_out"
                        android:layout_toRightOf="@+id/fa_sign_out"
                        android:text="@string/logout"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>